--- a/index.html
+++ b/index.html
@@ -134,111 +134,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </section>
 
-
-<section data-bs-version="5.1" class="features3 cid-sYxzkmBasE" id="features3-o">
-    <div class="container">
-        <div class="mbr-section-head">
-            <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5">
-                <strong>PORTFOLIO</strong></h4>
-            <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">Check Out Some of My Projects</h5>
-        </div>
-        <div class="row mt-4">
-            <div class="item features-image сol-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="img/site/maxmsp-551x301.webp" alt="">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Sound Design</strong></h5>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">"I would like to know how sound is made, to know how to recreate it and move it in space."
-<br>
-<br>These were my ambitions before starting my studies at the Santa Cecilia Conservatory in Rome. Under the guidance of the best Italian teachers, I can say that after 5 years of in-depth study of all related subjects, I managed to achieve this goal!.</p>
-                    </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/tools.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
-                </div>
-            </div>
-            <div class="item features-image сol-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="img/site/corkino-550x301.webp" alt="">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>corkino</strong></h5>
-
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
-                    </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/projects/corkino.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
-                </div>
-            </div>
-            <div class="item features-image сol-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="img/site/dibox-551x301.webp" alt="">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-7"><strong>Dual Channel DI Box</strong></h5>
-
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">The DI Box is a indispensable tool in any concert or studio context. The Dual Channel DI Box was made on commission: the customer needed a compact, versatile device intended for the most varied uses. The tool makes use of the best components available on the market. The Monacor 10:1 (DIB-110) transformer is the star of the system! Its performances are currently the best in its category and make this product satisfactory in use. The tailor-made design of the product is what makes the difference, it's your idea that becomes reality!<br></p>
-                    </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming soon!</a></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-<section data-bs-version="5.1" class="features1 cid-sYxCedtxpF mbr-parallax-background" id="features1-p">
-    <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);">
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-lg-9">
-                <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5">
-                    <strong>SERVICES</strong>
-                </h3>
-                <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">What Can I Do For You?</h5>
-            </div>
-        </div>
-        <div class="row">
-            <div class="card col-12 col-md-6 col-lg-3">
-                <div class="card-wrapper">
-                    <div class="card-box align-center">
-                        <div class="iconfont-wrapper">
-                            <span class="mbr-iconfont mobi-mbri-code mobi-mbri" style="color: rgb(117, 173, 219); fill: rgb(117, 173, 219);"></span>
-                        </div>
-                        <h5 class="card-title mbr-fonts-style display-7" style="text-align:center;"><strong>Live Sound Engeneering</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">With the care of timbre, dynamics and space, I have gained hundreds of hours of concerts of all kinds: from classical to contemporary music, from folk to jazz.<br><br>The next one is just a surprise and we will turn it into an experience!&nbsp;<br></p>
-                    </div>
-                </div>
-            </div>
-            <div class="card col-12 col-md-6 col-lg-3">
-                <div class="card-wrapper">
-                    <div class="card-box align-center">
-                        <div class="iconfont-wrapper">
-                            <span class="mbr-iconfont mobi-mbri-responsive-2 mobi-mbri" style="color: rgb(117, 173, 219); fill: rgb(117, 173, 219);"></span>
-                        </div>
-                        <h5 class="card-title mbr-fonts-style display-7" style="text-align:center;"><strong>Art Installations</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">Accuracy of technical and aesthetic details, passion for multidisciplinarity. In last years I have collaborated as musical technical assistant for artistic installations conceived by <a href="http://www.crm-music.it">Centro Ricerche Musicali</a>, historical and international promoter of contemporary art and science of Rome.&nbsp;<br></p>
-                    </div>
-                </div>
-            </div>
-            <div class="card col-12 col-md-6 col-lg-3">
-                <div class="card-wrapper">
-                    <div class="card-box align-center">
-                        <div class="iconfont-wrapper">
-                            <span class="mbr-iconfont mobi-mbri-website-theme-2 mobi-mbri" style="color: rgb(117, 173, 219); fill: rgb(117, 173, 219);"></span>
-                        </div>
-                        <h5 class="card-title mbr-fonts-style display-7" style="text-align:center;"><strong>Instruments Developement</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality.<br><br>Check out my latest projects!&nbsp;<br></p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</section>
-
+  <!-- Credits-->
 <section data-bs-version="5.1" class="features3 cid-t1EZGBaNgR" id="features3-2m">
 
 
@@ -303,6 +199,112 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
 
+        </div>
+    </div>
+</section>
+
+
+
+<section data-bs-version="5.1" class="features1 cid-sYxCedtxpF mbr-parallax-background" id="features1-p">
+    <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);">
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-9">
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5">
+                    <strong>SERVICES</strong>
+                </h3>
+                <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">What Can I Do For You?</h5>
+            </div>
+        </div>
+        <div class="row">
+            <div class="card col-12 col-md-6 col-lg-3">
+                <div class="card-wrapper">
+                    <div class="card-box align-center">
+                        <div class="iconfont-wrapper">
+                            <span class="mbr-iconfont mobi-mbri-code mobi-mbri" style="color: rgb(117, 173, 219); fill: rgb(117, 173, 219);"></span>
+                        </div>
+                        <h5 class="card-title mbr-fonts-style display-7" style="text-align:center;"><strong>Live Sound Engeneering</strong></h5>
+                        <p class="card-text mbr-fonts-style display-7">With the care of timbre, dynamics and space, I have gained hundreds of hours of concerts of all kinds: from classical to contemporary music, from folk to jazz.<br><br>The next one is just a surprise and we will turn it into an experience!&nbsp;<br></p>
+                    </div>
+                </div>
+            </div>
+            <div class="card col-12 col-md-6 col-lg-3">
+                <div class="card-wrapper">
+                    <div class="card-box align-center">
+                        <div class="iconfont-wrapper">
+                            <span class="mbr-iconfont mobi-mbri-responsive-2 mobi-mbri" style="color: rgb(117, 173, 219); fill: rgb(117, 173, 219);"></span>
+                        </div>
+                        <h5 class="card-title mbr-fonts-style display-7" style="text-align:center;"><strong>Art Installations</strong></h5>
+                        <p class="card-text mbr-fonts-style display-7">Accuracy of technical and aesthetic details, passion for multidisciplinarity. In last years I have collaborated as musical technical assistant for artistic installations conceived by <a href="http://www.crm-music.it">Centro Ricerche Musicali</a>, historical and international promoter of contemporary art and science of Rome.&nbsp;<br></p>
+                    </div>
+                </div>
+            </div>
+            <div class="card col-12 col-md-6 col-lg-3">
+                <div class="card-wrapper">
+                    <div class="card-box align-center">
+                        <div class="iconfont-wrapper">
+                            <span class="mbr-iconfont mobi-mbri-website-theme-2 mobi-mbri" style="color: rgb(117, 173, 219); fill: rgb(117, 173, 219);"></span>
+                        </div>
+                        <h5 class="card-title mbr-fonts-style display-7" style="text-align:center;"><strong>Instruments Developement</strong></h5>
+                        <p class="card-text mbr-fonts-style display-7">From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality.<br><br>Check out my latest projects!&nbsp;<br></p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
+<section data-bs-version="5.1" class="features3 cid-sYxzkmBasE" id="features3-o">
+    <div class="container">
+        <div class="mbr-section-head">
+            <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5">
+                <strong>PORTFOLIO</strong></h4>
+            <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">Check Out Some of My Projects</h5>
+        </div>
+        <div class="row mt-4">
+            <div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="img/site/maxmsp-551x301.webp" alt="">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Sound Design</strong></h5>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">"I would like to know how sound is made, to know how to recreate it and move it in space."
+<br>
+<br>These were my ambitions before starting my studies at the Santa Cecilia Conservatory in Rome. Under the guidance of the best Italian teachers, I can say that after 5 years of in-depth study of all related subjects, I managed to achieve this goal!.</p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/tools.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                </div>
+            </div>
+            <div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="img/site/corkino-550x301.webp" alt="">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>corkino</strong></h5>
+
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/projects/corkino.html" class="btn btn-primary item-btn display-7" target="_blank">Details &gt;</a></div>
+                </div>
+            </div>
+            <div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="img/site/dibox-551x301.webp" alt="">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-7"><strong>Dual Channel DI Box</strong></h5>
+
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">The DI Box is a indispensable tool in any concert or studio context. The Dual Channel DI Box was made on commission: the customer needed a compact, versatile device intended for the most varied uses. The tool makes use of the best components available on the market. The Monacor 10:1 (DIB-110) transformer is the star of the system! Its performances are currently the best in its category and make this product satisfactory in use. The tailor-made design of the product is what makes the difference, it's your idea that becomes reality!<br></p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming soon!</a></div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
