--- a/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html
+++ b/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html
@@ -122,36 +122,66 @@
                             <br>
                             <br>
                             La struttura unica da sostanza a quel carattere della musica di Stockhausen per cui ogni pezzo è un'idea compositiva completamente nuova, sia pure collocata in una regione dell'opera di Stockhausen caratterizzata da un procedimento di massima che è lo stesso. Ad esempio i pezzi scritti con al moment form sono tanti, pezzi scritti con la formula sono diversi, ma all'interno di queste grandi famiglie di brani i brani rappresentano sempre idee nuove.
-                            <br>
-                              <h4>Forme di sviluppo</h4>
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Text-->
+                      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                          <div class="container">
+                              <div class="row justify-content-center">
+                                  <div class="col-md-12 col-lg-8">
+                                    <h4>A. Forme di sviluppo</h4>
+                                      <p class="mbr-text mbr-fonts-style display-7">
                             Esse sono drammatiche (per esempio la forma sonata è un tipo di sviluppo, Stockhausen si inventa qualsiasi tipo di sviluppo drammatico laddove si presentano degli elementi che hanno delle evoluzione, come Plus-Minus).
-                            <br>
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
                               <h4>Forme per concatenazione</h4>
                             Per Stockhausen ad esempio la suite è una forma per concatenazione, anche se ci risulta difficile capire bene cosa siano come le moment form. L'esempio delle suite viene fatto da Stockhausen in un articolo intitolato “Invenzione e scoperta” del 1963.
-                            <br>
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
                               <h4>Moment form</h4>
                             Essa risulta sia tra i materiali che tra gli schemi formali. È difficile dunque nella pratica di Stockhausen capire la differenza concreta tra le forme per concatenazione e la moment form, ovvero: perché una moment form non può essere giudicata una forma per concatenazione?
                             <br>
                             <br>
                             Forse leggendo tra le righe di Stockhausen, si intende che le suite hanno in comune degli aspetti che caratterizzano un po' tutti i brani, la Suite Barocca è infatti caratterizzata da:
-                            <br>
                             <ul>
                               <li>forma bipartita</li>
                               <li>omogeneità di tonalità, salvo incursioni nel maggiore o minore della stessa tonica</li>
                               <li>vi è il presupposto della cristallizzazione della forma di danza</li>
                               <li>ci sono dunque elementi unificanti che informano di se ognuno di questi pezzi</li>
                             </ul>
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
                             Nella moment form non c'è nulla di tutto ciò, ci sono tendenze statistiche all'interno di ogni Momente, ma tendenzialmente ogni Momente è a se stante. Ma i Momente possono essere di dimensioni e durate molto diverse, è questa classificazione risulta un po' a priori e di cui si fa fatica a capire quale sia il presupposto concreto, ovvero il presupposto storico, la concretizzazione storica di questa differenza tra forme di concatenazione e Moment form nel repertorio contemporaneo (qualcosa di un po' ambiguo).
-                            <br>
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
                             <h4>Punti</h4>
                             Altra ambiguità riguarda il tipo di criterio seguito va per punti, gruppi e sottoinsiemi, sembra quasi che questi
-                            <br>
                             <h4>Sottogruppi</h4>
-                            <br>
                             <h4>Insiemi</h4>
                             Questi insiemi (definiti da Coenen come collective), parola tedesca collective, esempio di un collective, non è ne un gruppo ne un'aggregazione di punti, non ulteriormente scomponibile.
                             Anche qui sembra che la necessità di simmetria e perfetta corrispondenza in ogni punto di organizzazione sistematica, prevalga sulla effettiva realizzazione di opere ben definite.
                             Coenen parla di collective per la prima volta, e dunque anche qui prendiamo questa suddivisione con le pinze.
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
                             <h3>Le forme</h3>
                             <h4>Forme determinate</h4>
                             Partitura scritta tutta per intero.
