--- a/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html
+++ b/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html
@@ -141,14 +141,28 @@
                     </div>
                 </div>
             </section>
-                              <h4>Forme per concatenazione</h4>
+
+            <!-- Text-->
+                      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                          <div class="container">
+                              <div class="row justify-content-center">
+                                  <div class="col-md-12 col-lg-8">
+                                    <h4>B. Forme per concatenazione</h4>
+                                      <p class="mbr-text mbr-fonts-style display-7">
                             Per Stockhausen ad esempio la suite è una forma per concatenazione, anche se ci risulta difficile capire bene cosa siano come le moment form. L'esempio delle suite viene fatto da Stockhausen in un articolo intitolato “Invenzione e scoperta” del 1963.
                           </p>
                         </div>
                     </div>
                 </div>
             </section>
-                              <h4>Moment form</h4>
+
+            <!-- Text-->
+                      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                          <div class="container">
+                              <div class="row justify-content-center">
+                                  <div class="col-md-12 col-lg-8">
+                                    <h4>C. Momentform</h4>
+                                      <p class="mbr-text mbr-fonts-style display-7">
                             Essa risulta sia tra i materiali che tra gli schemi formali. È difficile dunque nella pratica di Stockhausen capire la differenza concreta tra le forme per concatenazione e la moment form, ovvero: perché una moment form non può essere giudicata una forma per concatenazione?
                             <br>
                             <br>
@@ -164,16 +178,30 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Text-->
+                      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                          <div class="container">
+                              <div class="row justify-content-center">
+                                  <div class="col-md-12 col-lg-8">
+                                      <p class="mbr-text mbr-fonts-style display-7">
                             Nella moment form non c'è nulla di tutto ciò, ci sono tendenze statistiche all'interno di ogni Momente, ma tendenzialmente ogni Momente è a se stante. Ma i Momente possono essere di dimensioni e durate molto diverse, è questa classificazione risulta un po' a priori e di cui si fa fatica a capire quale sia il presupposto concreto, ovvero il presupposto storico, la concretizzazione storica di questa differenza tra forme di concatenazione e Moment form nel repertorio contemporaneo (qualcosa di un po' ambiguo).
                           </p>
                         </div>
                     </div>
                 </div>
             </section>
-                            <h4>Punti</h4>
+
+            <!-- Text-->
+                      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                          <div class="container">
+                              <div class="row justify-content-center">
+                                  <div class="col-md-12 col-lg-8">
+                                    <h4>1. Punti</h4>
+                                      <p class="mbr-text mbr-fonts-style display-7">
                             Altra ambiguità riguarda il tipo di criterio seguito va per punti, gruppi e sottoinsiemi, sembra quasi che questi
-                            <h4>Sottogruppi</h4>
-                            <h4>Insiemi</h4>
+                            <h4>2. Sottogruppi</h4>
+                            <h4>3. Insiemi</h4>
                             Questi insiemi (definiti da Coenen come collective), parola tedesca collective, esempio di un collective, non è ne un gruppo ne un'aggregazione di punti, non ulteriormente scomponibile.
                             Anche qui sembra che la necessità di simmetria e perfetta corrispondenza in ogni punto di organizzazione sistematica, prevalga sulla effettiva realizzazione di opere ben definite.
                             Coenen parla di collective per la prima volta, e dunque anche qui prendiamo questa suddivisione con le pinze.
